# smart-file-sorter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Agent.h  FileCategorizer.h
src/: Agent.cpp  FileCategorizer.cpp  main.cpp
tests/: test_agent.cpp
